Templates are updated.

--- a/hetzner-github/templates/mgmt/components/argo-workflows/application.yaml
+++ b/hetzner-github/templates/mgmt/components/argo-workflows/application.yaml
@@ -74,7 +74,7 @@ spec:
               key: secretkey
             insecure: false
             bucket: <KUBEFIRST_STATE_STORE_BUCKET>
-            endpoint: nyc3.digitaloceanspaces.com
+            endpoint: objectstore.<CLOUD_REGION>.civo.com
             region: <CLOUD_REGION>
             useSDKCreds: false
             encryptionOptions:
