--- a/hetzner-github/templates/mgmt/components/actions-runner-controller/application.yaml
+++ b/hetzner-github/templates/mgmt/components/actions-runner-controller/application.yaml
@@ -56,11 +56,16 @@ spec:
         podLabels: {}
 
         podSecurityContext:
-          {}
-
+          runAsUser: 1000
+          runAsNonRoot: true
         securityContext:
-          {}
-
+          capabilities:
+            drop:
+            - ALL
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          runAsUser: 1000
+        
         service:
           type: ClusterIP
           port: 443
