--- a/hetzner-github/templates/workload-vcluster/appproject-workload-cluster.yaml
+++ b/hetzner-github/templates/workload-vcluster/appproject-workload-cluster.yaml
@@ -29,7 +29,7 @@ spec:
     name: <WORKLOAD_CLUSTER_NAME>
   - namespace: default
     name: <WORKLOAD_CLUSTER_NAME>
-  - namespace: <WORKLOAD_ENVIRONMENT>
+  - namespace: <WORKLOAD_CLUSTER_NAME>
     name: <WORKLOAD_CLUSTER_NAME>
   - namespace: external-secrets-operator
     name: <WORKLOAD_CLUSTER_NAME>
