--- a/hetzner-github/templates/workload-cluster/infrastructure/workspace.yaml
+++ b/hetzner-github/templates/workload-cluster/infrastructure/workspace.yaml
@@ -25,20 +25,20 @@ spec:
         cluster_name = "<WORKLOAD_CLUSTER_NAME>"
       }
 
-      resource "civo_network" "kubefirst" {
+      resource "hcloud_network" "kubefirst" {
         label = local.cluster_name
       }
 
-      resource "civo_firewall" "kubefirst" {
+      resource "hcloud_firewall" "kubefirst" {
         name                 = local.cluster_name
-        network_id           = civo_network.kubefirst.id
+        network_id           = hcloud_network.kubefirst.id
         create_default_rules = true
       }
 
-      resource "civo_kubernetes_cluster" "kubefirst" {
+      resource "hcloud_kubernetes_cluster" "kubefirst" {
         name        = local.cluster_name
-        network_id  = civo_network.kubefirst.id
-        firewall_id = civo_firewall.kubefirst.id
+        network_id  = hcloud_network.kubefirst.id
+        firewall_id = hcloud_firewall.kubefirst.id
         pools {
           label      = local.cluster_name
           size       = var.instance_size
@@ -51,11 +51,11 @@ spec:
 
         data_json = jsonencode(
           {
-            kubeconfig             = civo_kubernetes_cluster.kubefirst.kubeconfig
-            client_certificate     = base64decode(yamldecode(civo_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-certificate-data)
-            client_key             = base64decode(yamldecode(civo_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-key-data)
-            cluster_ca_certificate = base64decode(yamldecode(civo_kubernetes_cluster.kubefirst.kubeconfig).clusters[0].cluster.certificate-authority-data)
-            host                   = civo_kubernetes_cluster.kubefirst.api_endpoint
+            kubeconfig             = hcloud_kubernetes_cluster.kubefirst.kubeconfig
+            client_certificate     = base64decode(yamldecode(hcloud_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-certificate-data)
+            client_key             = base64decode(yamldecode(hcloud_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-key-data)
+            cluster_ca_certificate = base64decode(yamldecode(hcloud_kubernetes_cluster.kubefirst.kubeconfig).clusters[0].cluster.certificate-authority-data)
+            host                   = hcloud_kubernetes_cluster.kubefirst.api_endpoint
             cluster_name           = local.cluster_name
             argocd_manager_sa_token = kubernetes_secret_v1.argocd_manager.data.token
           }
@@ -63,10 +63,10 @@ spec:
       }
 
       provider "kubernetes" {
-        host                   = civo_kubernetes_cluster.kubefirst.api_endpoint
-        client_certificate     = base64decode(yamldecode(civo_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-certificate-data)
-        client_key             = base64decode(yamldecode(civo_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-key-data)
-        cluster_ca_certificate = base64decode(yamldecode(civo_kubernetes_cluster.kubefirst.kubeconfig).clusters[0].cluster.certificate-authority-data)
+        host                   = hcloud_kubernetes_cluster.kubefirst.api_endpoint
+        client_certificate     = base64decode(yamldecode(hcloud_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-certificate-data)
+        client_key             = base64decode(yamldecode(hcloud_kubernetes_cluster.kubefirst.kubeconfig).users[0].user.client-key-data)
+        cluster_ca_certificate = base64decode(yamldecode(hcloud_kubernetes_cluster.kubefirst.kubeconfig).clusters[0].cluster.certificate-authority-data)
       }
 
       resource "kubernetes_cluster_role_v1" "argocd_manager" {
